# Collaborative_Transport

./: README.md
multi_robot_controller/: CMakeLists.txt  doxyfile  multi_robot_plugins.xml  package.xml  plugins.xml  rosdoc.yaml
multi_robot_controller/cfg/: lyapunov.cfg  param.yaml
multi_robot_controller/config/: orientation_ff.yaml  slave.yaml
multi_robot_controller/docs/: manifest.yaml
multi_robot_controller/docs/html/: annotated.html  annotated_dup.js  classes.html  dir_38c65ab8900ffa8fb81b4445cdf9f87a.html  dir_38c65ab8900ffa8fb81b4445cdf9f87a.js  dir_41ef5d8a90b9cc03a02949a5c062e6f0.html  dir_4df039e683ff9f86e1dbacd50f93d108.html  dir_5678da97a77c01dd73a80fd3582304c6.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_62e600016f3771defaedbb9a61a3620b.html  dir_62e600016f3771defaedbb9a61a3620b.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_71b45c467ccf832b58fe7a9453e09886.html  dir_71b45c467ccf832b58fe7a9453e09886.js  dir_b50dc725db71458029b22868a9250dc9.html  dir_ba8b61985ad17fa6148121e01833e7ee.html  dir_ba8b61985ad17fa6148121e01833e7ee.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_d5cb225ff3fa3e9530baa2c82ed3441f.html  dir_d5cb225ff3fa3e9530baa2c82ed3441f.js  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  hierarchy.js  index-msg.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  (+16 more)
multi_robot_controller/docs/html/c++/: README_8md.html  README_8md_source.html  annotated.html  classConstrainedRigidMotion-members.html  classConstrainedRigidMotion.html  classConstrainedRigidMotionRos-members.html  classConstrainedRigidMotionRos.html  classConstrainedRigidMotionRos__inherit__graph.map  classConstrainedRigidMotionRos__inherit__graph.md5  classConstrainedRigidMotionTf-members.html  classConstrainedRigidMotionTf.html  classConstrainedRigidMotionTf__inherit__graph.map  classConstrainedRigidMotionTf__inherit__graph.md5  classConstrainedRigidMotion__inherit__graph.map  classConstrainedRigidMotion__inherit__graph.md5  classController-members.html  classController.html  classController__inherit__graph.map  classController__inherit__graph.md5  classInputAllocException-members.html  classInputAllocException.html  classInputAllocException__inherit__graph.map  classInputBase-members.html  classInputBase.html  classInputBase__inherit__graph.map  classInputBase__inherit__graph.md5  classInputOdom-members.html  classInputOdom.html  classInputOdom__inherit__graph.map  classInputOdom__inherit__graph.md5  classInputPoseOdom-members.html  classInputPoseOdom.html  classInputPoseOdom__inherit__graph.map  classInputPoseOdom__inherit__graph.md5  classInputPoseTwist-members.html  classInputPoseTwist.html  classInputPoseTwistLocal-members.html  classInputPoseTwistLocal.html  classInputPoseTwistLocal__inherit__graph.map  classInputPoseTwistLocal__inherit__graph.md5  (+307 more)
multi_robot_controller/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+13 more)
multi_robot_controller/docs/latex/: annotated.tex  dir_38c65ab8900ffa8fb81b4445cdf9f87a.tex  dir_41ef5d8a90b9cc03a02949a5c062e6f0.tex  dir_4df039e683ff9f86e1dbacd50f93d108.tex  dir_5678da97a77c01dd73a80fd3582304c6.tex  dir_62e600016f3771defaedbb9a61a3620b.tex  dir_71b45c467ccf832b58fe7a9453e09886.tex  dir_b50dc725db71458029b22868a9250dc9.tex  dir_ba8b61985ad17fa6148121e01833e7ee.tex  dir_d5cb225ff3fa3e9530baa2c82ed3441f.tex  files.tex  hierarchy.tex  modules.tex  refman.tex
multi_robot_controller/include/multi_robot_controller/: constrained_rigid_motion.h  constrained_rigid_motion_ros.h  constrained_rigid_motion_tf.h  controller.h  controllerV2.h  input_alloc_exception.hpp  input_base.h  input_base.hpp  input_odom.h  input_odom.hpp  input_pose_odom.h  input_pose_odom.hpp  input_pose_twist.h  input_pose_twist.hpp  input_types.hpp  lyapunov_controller.h  lyapunov_controller.hpp  necessary_param_exeption.hpp  pass_through_controller.hpp
multi_robot_controller/launch/: master.launch  orientation_feed_forward.launch  rigid_transformer.launch  slave.launch
multi_robot_controller/launch/tests/: off_dummie_transform_test.launch  off_real_transforms.launch  orientation_ff_msg_msg.launch
multi_robot_controller/src/: constrained_rigid_motion.cpp  constrained_rigid_motion_ros.cpp  constrained_rigid_motion_tf.cpp  controller.cpp  controllerV2.cpp  lyapunov_controller.cpp  master_node.cpp  slave_node.cpp
multi_robot_controller/src/Controller/: controller.cpp  lyapunov_controller.cpp
multi_robot_controller/src/Nodes/: master_node.cpp  referencing_controller_node.cpp  rigid_transformer.cpp  slave_node.cpp
multi_robot_controller/src/RigidMotion/: constrained_rigid_motion.cpp  constrained_rigid_motion_ros.cpp  constrained_rigid_motion_tf.cpp
multi_robot_controller/src/controller/: cartesian_impedance_controller.cpp  controller.cpp  lyapunov_controller.cpp
multi_robot_controller/src/feed_forward/: msg_msg_orientation_feed_forward.cpp  msg_orientation_feed_forward.cpp  orientation_feed_forward.cpp  ros_orientation_feed_forward_base.cpp  tf_orientation_feed_forward.cpp
multi_robot_controller/src/nodes/: feed_forward_msg_msg_node.cpp  feed_forward_msg_node.cpp  feed_forward_tf_node.cpp  master_node.cpp  rigid_transformer.cpp  slave_node.cpp
multi_robot_controller/src/rigid_motion/: constrained_rigid_motion.cpp  constrained_rigid_motion_ros.cpp  constrained_rigid_motion_tf.cpp
multi_robot_controller/src/tests/: controller_test.cpp  input_test.cpp  rigid_motion_test.cpp
multi_robot_controller/tests/: controller_test.cpp  dummie_base_move_broadcaster.cpp  input_test.cpp  orientation_feed_forward_test.cpp  rigid_motion_test.cpp
(+552 files in other folders)
